[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.poetry]
name = "catt"
version = "0.13.1"
description = "Cast All The Things allows you to send videos from many, many online sources to your Chromecast."
license = "BSD"
keywords = ["chromecast", "cast", "catt", "cast_all_the_things"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
homepage = "https://github.com/skorokithakis/catt"
authors = ["Stavros Korokithakis <hi@stavros.io>"]
readme = "README.md"

[tool.poetry.scripts]
catt = "catt.cli:main"

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=7.1.2"
ifaddr = ">=0.1.7"
pychromecast = ">=14.0.1, <15"
requests = ">=2.23.0"
yt-dlp = ">=2023.3.4"

[tool.poetry.group.dev.dependencies]
coverage = "*"
flake8 = "*"
gitchangelog = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pystache = "*"
pytest = "*"
sphinx = "==1.3.1"
tox = ">=3.13.2"
virtualenv = ">=20.0.8"
wheel = "*"

[tool.ruff]
lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
