[bumpversion]
tag = True
commit = True
current_version = 1.0.0

[wheel]
universal = 1

[flake8]
exclude = docs
ignore = E501,W503
import-order-style = smarkets

[bdist_wheel]
python-tag = py3

[options]
python_requires = >= 3.4

[isort]
include_trailing_comma = true
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
skip = migrations,node_modules

[semantic_release]
version_variable = catt/__init__.py:__version__

[bumpversion:file:catt/__init__.py]
